adicionado aba shows

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -35,6 +35,7 @@
             height: 50px;
             max-width: 350px;
             border: none;
+            padding: 10px 24px 11px;
 
             &:hover{
                 cursor: pointer;
