--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,13 @@
 @use 'hero';
 @use 'sinopse';
 @use 'variaveis';
+@use 'shows';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 body{
