--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @use 'variaveis';
 @use 'shows';
 @use 'footer';
+@use 'header';
 
 *{
     margin: 0;
@@ -13,4 +14,16 @@
 
 body{
     background-color: variaveis.$cordefundo;
+}
+
+.button{
+    font-weight: bold;
+    font-size: large;
+    background-color: variaveis.$cordefundobotao;
+    border-radius: 8px;
+    width: 100%;
+    height: 50px;
+    max-width: 350px;
+    border: none;
+    padding: 10px 24px 11px;
 }
