--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -8,11 +8,11 @@
         gap: 12px;
         padding-top: 20px;
 
-        @media (max-width:760px){
+        @media (max-width:768px){
             grid-template-columns: 1fr 1fr;
         }
 
-        @media (max-width:1024px){
+        @media (min-width:770px) and (max-width:1024px){
             grid-template-columns: 1fr 1fr 1fr;
         }
 
